--- a/client/webui/frontend/package.json
+++ b/client/webui/frontend/package.json
@@ -94,7 +94,8 @@
         "react-intersection-observer": "^9.16.0",
         "react-json-view-lite": "^2.4.1",
         "react-resizable-panels": "^3.0.3",
-        "react-router-dom": "^7.9.3",
+        "react-router-dom": "^7.9.6",
+        "react-router-form": "^3.0.0",
         "recharts": "^2.15.3",
         "tailwind-merge": "^3.3.0",
         "tailwind-scrollbar-hide": "^4.0.0",
